<resources>
    <string name="app_name">Distance Support</string>
    <string name="button_finish">Finish</string>
    <string name="button_next">Next</string>
    <string name="button_previous">Previous</string>
    <string name="button_reset">#</string>
    <string name="change_fitting_device">Change iCube</string>
    <string name="com_sonova_difian_ui_fitting_chatfragment_delivery_failed_menu_delete">Delete</string>
    <string name="com_sonova_difian_ui_fitting_chatfragment_delivery_failed_menu_retry">Retry</string>
    <string name="com_sonova_difian_ui_fitting_chatfragment_row_failed_contentdescription">Message delivery failed. Retry button.</string>
    <string name="com_sonova_difian_ui_fitting_chatfragment_typing">Typing&#8230;</string>
    <string name="com_sonova_difian_ui_fitting_chatlistadapter_messagetext_system_connected">iCube connected</string>
    <string name="com_sonova_difian_ui_fitting_chatlistadapter_messagetext_system_disconnected">iCube disconnected</string>
    <string name="com_sonova_difian_ui_fitting_chatlistadapter_messagetext_system_muted_both">Both sides muted</string>
    <string name="com_sonova_difian_ui_fitting_chatlistadapter_messagetext_system_muted_left">Left side muted</string>
    <string name="com_sonova_difian_ui_fitting_chatlistadapter_messagetext_system_muted_right">Right side muted</string>
    <string name="com_sonova_difian_ui_fitting_chatlistadapter_messagetext_system_unmuted_both">Both sides unmuted</string>
    <string name="com_sonova_difian_ui_fitting_chatlistadapter_messagetext_system_unmuted_left">Left side unmuted</string>
    <string name="com_sonova_difian_ui_fitting_chatlistadapter_messagetext_system_unmuted_right">Right side unmuted</string>
    <string name="com_sonova_difian_ui_fitting_confirmcancellationactivity_message">Abort session?</string>
    <string name="com_sonova_difian_ui_fitting_confirmcancellationactivity_secondary_message">If in doubt, press Cancel.</string>
    <string name="com_sonova_difian_ui_fitting_fittingmainactivity_chateditor_message_hint">Your message</string>
    <string name="com_sonova_difian_ui_fitting_fittingmainactivity_send">Send</string>
    <string name="com_sonova_difian_ui_fitting_fittingstatusconnectingfittingdeviceactivity_message">Connecting to the iCube&#8230;</string>
    <string name="com_sonova_difian_ui_fitting_fittingstatusconnectingnetworkactivity_message">Connecting to the Internet&#8230;</string>
    <string name="com_sonova_difian_ui_fitting_fittingstatusendingsessionactivity_message">Finishing session&#8230;</string>
    <string name="com_sonova_difian_ui_fitting_fittingstatuserroractivity_message">&#8230;</string>
    <string name="com_sonova_difian_ui_fitting_fittingstatuserroractivity_message_networkfailed">Unable to connect to the Internet.</string>
    <string name="com_sonova_difian_ui_fitting_fittingstatuserroractivity_message_serialfailed">Unable to connect to the iCube.</string>
    <string name="com_sonova_difian_ui_fitting_fittingstatuserroractivity_secondary_message">Trying to connect&#8230;</string>
    <string name="com_sonova_difian_ui_fitting_fittingstatuswaitingforaudiologistactivity_message">Waiting for your audiologist&#8230;</string>
    <string name="com_sonova_difian_ui_main_mainactivity_image_contentdescription">User wearing iCube and hearing instruments.</string>
    <string name="com_sonova_difian_ui_setup_mainactivity_text"><b>Welcome</b> to Distance Support.\n\nDistance Support requires Internet and an iCube fitting device.\n\nTap the test button to test your Internet connection.\n\nTap the setup button to set up an iCube fitting device.</string>
    <string name="com_sonova_difian_ui_test_testactivity_message">Test running&#8230;</string>
    <string name="com_sonova_difian_ui_test_testresultactivity_fail_message">Unable to connect to the Internet.</string>
    <string name="com_sonova_difian_ui_test_testresultactivity_fail_secondary_message">The current WiFi or mobile network does not allow Distance Support.</string>
    <string name="com_sonova_difian_ui_test_testresultactivity_success_message">Success.</string>
    <string name="com_sonova_difian_ui_test_testresultactivity_success_secondary_message">The current WiFi or mobile network allows Distance Support.</string>
    <string name="crash_dialog_message">Found information about a previous crash. Report to manufacturer?</string>
    <string name="crash_dialog_title">Crash Data</string>
    <string name="crash_dialog_negative_button">Dismiss</string>
    <string name="crash_dialog_positive_button">Report</string>
    <string name="current_fitting_device"></string>
    <string name="debug_reset">Remove iCube</string>
    <string name="debug_crash">Debug crash</string>
    <string name="fitting_device_pairing_image">The pairing button is in a hole on the front of the iCube.</string>
    <string name="fitting_device_power_on_image">The power button is on the left side of the iCube.</string>
    <string name="fitter_image">Your audiologist</string>
    <string name="chat_message_image">Chat message image</string>
    <string name="main_intro_text">1) <b>Wear the hearing instruments</b> with fresh batteries, switched on.\n\n2) <b>Wear the iCube</b>, fully charged.</string>
    <string name="notification_fittingservice_text">Session in progress</string>
    <string name="notification_fittingservice_title">Distance Support</string>
    <string name="pref_relay_region">Region</string>
    <string name="pref_relay_region_default">try.yaler.net:443</string>
    <string name="pref_relay_region_title">Region</string>
    <string name="progress_communicating_with_fitting_device">Communicating with iCube&#8230;</string>
    <string name="progress_scanning">Searching iCube…</string>
    <string name="progress_scanning_details">(display may flicker shortly)</string>
    <string name="setup_fitting_device">Setup</string>
    <string name="setup_step_bluetooth_description">Press and hold the pairing button on the iCube with a pen, until the blue light is blinking.</string>
    <string name="settings">Settings</string>
    <string name="setup_succeeded_description">Success, found iCube. Tap finish to complete setup.</string>
    <string name="start_fitting_session">Start session</string>
    <string name="switch_on_fitting_device_text">Press and hold the iCube power button for 2 seconds, until the orange light is blinking.</string>
    <string name="test_connection">Test</string>
    <string name="title_activity_main">Distance Support</string>
    <string name="title_activity_fitting">Distance Support</string>
    <string name="title_activity_fittingtatusconnectingtofittingdevice">Connecting to the iCube</string>
    <string name="title_activity_fittingtatusconnectingtonetwork">Connecting to the Internet</string>
    <string name="title_activity_fittingstatuserror">An error occurred</string>
    <string name="title_activity_fittingtatuswaitingforaudiologist">Waiting for your audiologist</string>
    <string name="title_activity_fittingstatusendingsession">Ending session</string>
    <string name="title_activity_fittingdevicepicker">Searching iCube</string>
    <string name="title_activity_relayid">Distance Support</string>
    <string name="title_activity_setup">Distance Support</string>
    <string name="title_activity_testrunning">Test running</string>
    <string name="title_activity_testresult">Test done</string>
    <string name="title_activity_confirmcancellation">Abort session?</string>
</resources>
