<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/switch_on_fitting_device_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/imageView1"
        android:contentDescription="@string/fitting_device_power_on_image"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/margin"
        android:src="@drawable/icube_switching_on" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding">

        <Button
            style="@style/SecondaryButtonAppTheme"
            android:id="@+id/com_sonova_difian_ui_main_mainactivity_button_previous"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="true"
            android:onClick="previous"
            android:text="@string/button_previous"/>
        <Button
            style="@style/SecondaryButtonAppTheme"
            android:id="@+id/com_sonova_difian_ui_main_mainactivity_button_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="true"
            android:onClick="next"
            android:text="@string/button_next"/>
    </LinearLayout>
</LinearLayout>
